--- a/index.html
+++ b/index.html
@@ -303,10 +303,12 @@
     <!-- Filter Controls -->
     <div class="controls">
         <button class="filter-btn active" data-filter="all">All Work</button>
-        <button class="filter-btn" data-filter="web">Websites</button>
-        <button class="filter-btn" data-filter="app">Mobile Apps</button>
-        <button class="filter-btn" data-filter="ecommerce">E-Commerce</button>
-        <button class="filter-btn" data-filter="ui">UI / Components</button>
+        <button class="filter-btn" data-filter="web">Graphics Design - GFX </button>
+        <button class="filter-btn" data-filter="app">Builders</button>
+        <button class="filter-btn" data-filter="ecommerce">Scripters</button>
+        <button class="filter-btn" data-filter="ui">Animators</button>
+        <button class="filter-btn" data-filter="ui">3D Modelers</button>
+        <button class="filter-btn" data-filter="ui">UGC</button>
     </div>
 
     <!-- Gallery Grid -->
