--- a/index.html
+++ b/index.html
@@ -300,9 +300,26 @@
         
         <!-- GFX (Single Image) -->
         <div class="gallery-item" data-category="gfx">
-            <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=800&auto=format&fit=crop" alt="GFX">
-            <div class="item-info"><span>Graphics Design</span><h3>Game Thumbnail Art</h3></div>
-        </div>
+    <div class="slider-wrapper">
+        <!-- Image 1 (Cover - Active) -->
+        <img src="https://media.discordapp.net/attachments/1441177940296728606/1443636448430522409/image.png?ex=692dbf36&is=692c6db6&hm=6f89f05679cbe9d1f8f78b291232d3c7e6682f84c4ad07cacf3fdec238d87db0&=&format=webp&quality=lossless" class="active" alt="GFX Work 1">
+
+        <!-- Image 2 -->
+        <img src="https://media.discordapp.net/attachments/1441177940296728606/1443636448736579705/image.png?ex=692dbf36&is=692c6db6&hm=93ed933815390db4076c859027356b5dddb426bf09ab8f7cb0f836c4a0a715b2&=&format=webp&quality=lossless" alt="GFX Work 2">
+
+        <!-- Image 3 -->
+        <img src="https://media.discordapp.net/attachments/1441177940296728606/1443636449260994743/image.png?ex=692dbf36&is=692c6db6&hm=e37bf57d5e7d0cf39250882bc669f4583db902021ac8ad2b04d2b5f53df3e139&=&format=webp&quality=lossless" alt="GFX Work 3">
+
+        <!-- Navigation Buttons -->
+        <button class="slider-btn prev-btn">&#10094;</button>
+        <button class="slider-btn next-btn">&#10095;</button>
+    </div>
+    
+    <div class="item-info">
+        <span>Graphics Design</span>
+        <h3>GFX Portfolio A</h3>
+    </div>
+</div>
 
         <!-- Builders (Single Image) -->
         <div class="gallery-item" data-category="builders">
