--- a/index.html
+++ b/index.html
@@ -364,6 +364,21 @@
         </div>
 
         <!-- ==========================================================================
+             CATEGORY: UGC
+             ========================================================================== -->
+             
+        <!-- UGC Dev A -->
+        <div class="gallery-item" data-category="ugc">
+            <div class="slider-wrapper">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1442622151281610962/image.png?ex=692eabd3&is=692d5a53&hm=18927e6ceff0a8ef8047f3c7f68d8a3959dd638ed4cf11369ced7fd70cc3914d&=&format=webp&quality=lossless" class="active" alt="UGC Dev A 1">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1442622152095436840/image.png?ex=692eabd3&is=692d5a53&hm=2a2abe121c7d0e0e94a077ec364708fb1bb263352fe736132196fbd03316de1a&=&format=webp&quality=lossless&width=1369&height=771" alt="UGC Dev A 2">
+                <button class="slider-btn prev-btn">&#10094;</button>
+                <button class="slider-btn next-btn">&#10095;</button>
+            </div>
+            <div class="item-info"><span>UGC</span><h3>UGC Dev A</h3></div>
+        </div>
+
+        <!-- ==========================================================================
              CATEGORY: MULTI-SKILL (Example: Images + Videos)
              ========================================================================== -->
         <div class="gallery-item" data-category="multi-skill">
@@ -400,16 +415,6 @@
                 <button class="slider-btn next-btn">&#10095;</button>
             </div>
             <div class="item-info"><span>Animator</span><h3>Character Rig & Emotes</h3></div>
-        </div>
-
-        <!-- UGC (Example) -->
-        <div class="gallery-item" data-category="ugc">
-            <div class="slider-wrapper">
-                <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?q=80&w=800&auto=format&fit=crop" class="active" alt="UGC">
-                <button class="slider-btn prev-btn">&#10094;</button>
-                <button class="slider-btn next-btn">&#10095;</button>
-            </div>
-            <div class="item-info"><span>UGC</span><h3>Custom Hats & Accessories</h3></div>
         </div>
 
     </section>
