--- a/index.html
+++ b/index.html
@@ -321,30 +321,18 @@
             <div class="item-info"><span>Builder</span><h3>Builder Dev A</h3></div>
         </div>
 
-        <!-- Builder Dev B -->
+        <!-- Builder Dev B (Formerly C, Renamed) -->
         <div class="gallery-item" data-category="builders">
             <div class="slider-wrapper">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1444105264130293881/image.png?ex=692d7995&is=692c2815&hm=db3907b45ac12041df6ae381cb6ed8d909600319c563dd4923b884fd8edadae6&=&format=webp&quality=lossless" class="active" alt="Builder B 1">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1444105264478425129/image.png?ex=692d7995&is=692c2815&hm=669749bc2e0e0c5ef4ab3bd7c45ff9001091655bcc8c66e95d715b6d15373f87&=&format=webp&quality=lossless" alt="Builder B 2">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1444105264478425129/image.png?ex=692d7995&is=692c2815&hm=669749bc2e0e0c5ef4ab3bd7c45ff9001091655bcc8c66e95d715b6d15373f87&=&format=webp&quality=lossless" alt="Builder B 3">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796377519591434/image.png?ex=692da503&is=692c5383&hm=3d18419e96078e521415286f90ed8c2c3b6240c7ba4b6bd163d06b84efd4ee64&=&format=webp&quality=lossless" class="active" alt="Builder B 1">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796377867976754/image.png?ex=692da503&is=692c5383&hm=5fa54bfa137452ea89b7589210225c92c3aa725d7c22f6026e5f5732d5bb23eb&=&format=webp&quality=lossless" alt="Builder B 2">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378211647589/image.png?ex=692da503&is=692c5383&hm=8c5a2ae4d35982929778ad39f4a049089371bbc7f35bc04d7732f25b5c70c1ff&=&format=webp&quality=lossless" alt="Builder B 3">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378534613135/image.png?ex=692da503&is=692c5383&hm=37983257640006bc9e65e6302e16e17f179494cd9c29895db1e02451c2f2a72f&=&format=webp&quality=lossless" alt="Builder B 4">
+                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378845249646/image.png?ex=692da503&is=692c5383&hm=902c7e308d297e2152ac0d0f1dc3def9ebb3dae81d659017a2ddae9dbcd3e700&=&format=webp&quality=lossless" alt="Builder B 5">
                 <button class="slider-btn prev-btn">&#10094;</button>
                 <button class="slider-btn next-btn">&#10095;</button>
             </div>
             <div class="item-info"><span>Builder</span><h3>Builder Dev B</h3></div>
-        </div>
-
-        <!-- Builder Dev C -->
-        <div class="gallery-item" data-category="builders">
-            <div class="slider-wrapper">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796377519591434/image.png?ex=692da503&is=692c5383&hm=3d18419e96078e521415286f90ed8c2c3b6240c7ba4b6bd163d06b84efd4ee64&=&format=webp&quality=lossless" class="active" alt="Builder C 1">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796377867976754/image.png?ex=692da503&is=692c5383&hm=5fa54bfa137452ea89b7589210225c92c3aa725d7c22f6026e5f5732d5bb23eb&=&format=webp&quality=lossless" alt="Builder C 2">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378211647589/image.png?ex=692da503&is=692c5383&hm=8c5a2ae4d35982929778ad39f4a049089371bbc7f35bc04d7732f25b5c70c1ff&=&format=webp&quality=lossless" alt="Builder C 3">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378534613135/image.png?ex=692da503&is=692c5383&hm=37983257640006bc9e65e6302e16e17f179494cd9c29895db1e02451c2f2a72f&=&format=webp&quality=lossless" alt="Builder C 4">
-                <img src="https://media.discordapp.net/attachments/1441177940296728606/1441796378845249646/image.png?ex=692da503&is=692c5383&hm=902c7e308d297e2152ac0d0f1dc3def9ebb3dae81d659017a2ddae9dbcd3e700&=&format=webp&quality=lossless" alt="Builder C 5">
-                <button class="slider-btn prev-btn">&#10094;</button>
-                <button class="slider-btn next-btn">&#10095;</button>
-            </div>
-            <div class="item-info"><span>Builder</span><h3>Builder Dev C</h3></div>
         </div>
 
         <!-- ==========================================================================
